Minify pom.xml